[gd_scene load_steps=10 format=3 uid="uid://by05o2xy5mbqx"]

[ext_resource type="Texture2D" uid="uid://b12d06318vp18" path="res://Assets/Sprites/red_body_circle.png" id="1_2qnxv"]
[ext_resource type="Script" path="res://Assets/Scripts/Player.gd" id="1_7gbp0"]
[ext_resource type="Texture2D" uid="uid://b6wtgeumr0u1v" path="res://Assets/Sprites/face_f.png" id="2_le3ex"]
[ext_resource type="Texture2D" uid="uid://b7rjwpwbkv5f4" path="res://Assets/Sprites/red_hand_rock.png" id="4_6mfjl"]
[ext_resource type="Script" path="res://Assets/Scripts/Camera2D.gd" id="5_1n6gk"]
[ext_resource type="AudioStream" uid="uid://bfl533ach57iy" path="res://Assets/Audio/sfx_wpn_laser6.wav" id="6_mbwip"]
[ext_resource type="PackedScene" uid="uid://ukbo4yhvbqc3" path="res://Scenes/Guns/smg.tscn" id="7_8oogr"]

[sub_resource type="CircleShape2D" id="CircleShape2D_tp57t"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_r7ie5"]
radius = 40.05

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_7gbp0")
move_speed = 10000.0
acceleration_speed = 0.1
deacceleration_speed = 0.9
max_speed = 50000.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_tp57t")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_r7ie5")

[node name="body_sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_2qnxv")

[node name="expression_sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_le3ex")

[node name="hand_root" type="Node2D" parent="."]

[node name="hand_sprite" type="Sprite2D" parent="hand_root"]
position = Vector2(64, 0)
rotation = 1.1973
texture = ExtResource("4_6mfjl")

[node name="focus_point" type="Node2D" parent="hand_root"]
position = Vector2(175, 0)

[node name="shot_cooldown_timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="shot_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_mbwip")
volume_db = -40.0

[node name="Camera2D" type="Camera2D" parent="." node_paths=PackedStringArray("target_a", "target_b")]
zoom = Vector2(0.5, 0.5)
script = ExtResource("5_1n6gk")
target_a = NodePath("../hand_root/focus_point")
target_b = NodePath("..")

[node name="gun" parent="." instance=ExtResource("7_8oogr")]
